Updated readme and packages files.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod --env=prod",
+    "build": "ng build --prod --env=prod --base-href https://talorlik.github.io/ng4-playground/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
